entered cast to moviepage + fixed whitespace on middlegrid

--- a/src/assets/scss/MoviePage.scss
+++ b/src/assets/scss/MoviePage.scss
@@ -19,6 +19,7 @@
 
 
 #actor-links {
+	font-weight: 400;
 	color: bisque;
 
 	&:hover {
