--- a/src/assets/scss/components/MiddleMovieGrid.scss
+++ b/src/assets/scss/components/MiddleMovieGrid.scss
@@ -29,3 +29,9 @@
 		font-family: $quote-marks-font;
 	}
 }
+
+.avg-vote,
+.runtime {
+	white-space: nowrap;
+
+}
